--- a/Sjuklöner/Views/Claims/Create3.cshtml
+++ b/Sjuklöner/Views/Claims/Create3.cshtml
@@ -69,7 +69,7 @@
             <div class="form-group small-bottom-margin">
                 @Html.LabelFor(model => model.SickPay, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.SickPay, new { htmlAttributes = new { @class = "form-control", @placeholder = Model.SickPay, id = "sickpay", onchange = "calculateSum()", onblur = "calculateSum()" } })
+                    @Html.EditorFor(model => model.SickPay, new { htmlAttributes = new { @class = "form-control", @placeholder = Model.SickPay, id = "sickpay", autofocus = "autofocus", onchange = "calculateSum()", onblur = "calculateSum()" } })
                     <div class="row row-height-14 line-height-07 col-left-padding-15">
                         @Html.ValidationMessageFor(model => model.SickPay, null, new { @class = "text-danger font-size-11", id = "sickpay-val" })
                     </div>
