--- a/Sjuklöner/Views/Claims/Delete.cshtml
+++ b/Sjuklöner/Views/Claims/Delete.cshtml
@@ -32,16 +32,16 @@
     </div>
 
     <div class="row">
-        @Html.LabelFor(m => m.QualifyingDate, new { @class = "col-md-2 display-right-align control-label" })
+        @Html.LabelFor(m => m.FirstClaimDate, new { @class = "col-md-2 display-right-align control-label" })
         <div class="col-small-left-padding col-md-10">
-            @Html.DisplayFor(model => model.QualifyingDate)
+            @Html.DisplayFor(model => model.FirstClaimDate)
         </div>
     </div>
 
     <div class="row">
-        @Html.LabelFor(m => m.LastDayOfSicknessDate, new { @class = "col-md-2 display-right-align control-label" })
+        @Html.LabelFor(m => m.LastClaimDate, new { @class = "col-md-2 display-right-align control-label" })
         <div class="col-small-left-padding col-md-10">
-            @Html.DisplayFor(model => model.LastDayOfSicknessDate)
+            @Html.DisplayFor(model => model.LastClaimDate)
         </div>
     </div>
 
