--- a/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
+++ b/Sjuklöner/Views/Claims/_ClaimForOmbud.cshtml
@@ -1130,23 +1130,24 @@
                     <div class="col col-md-5">
                         <div class="form-group line-height-12">
                             <div class="row label-padding">
-                                @Html.LabelFor(model => model.IVOCheck, htmlAttributes: new { @class = "control-label-left-align col-md-12" })
+                                @Html.LabelFor(model => model.ProxyCheck, htmlAttributes: new { @class = "control-label-left-align col-md-12" })
                             </div>
                             <div class="row display-padding">
-                                @Html.DisplayFor(m => m.IVOCheck)
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col col-md-5">
-                        <div class="form-group line-height-12">
-                            <div class="row label-padding">
-                                @Html.LabelFor(model => model.ProxyCheck, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })
-                            </div>
-                            <div class="row display-padding6">
                                 @Html.DisplayFor(m => m.ProxyCheck)
                             </div>
                         </div>
                     </div>
+                    @*Activate IVO: The following commented div need to be uncommented when the IVO-check shall be activated*@
+                    @*<div class="col col-md-5">
+                        <div class="form-group line-height-12">
+                            <div class="row label-padding">
+                                @Html.LabelFor(model => model.IVOCheck, htmlAttributes: new { @class = "control-label-left-align2 col-md-12" })
+                            </div>
+                            <div class="row display-padding6">
+                                @Html.DisplayFor(m => m.IVOCheck)
+                            </div>
+                        </div>
+                    </div>*@
                 </div>
                 <div class="row">
                     <div class="col col-md-5">
